--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 bson==0.5.10
 click==8.1.3
+dnspython==2.3.0
 Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
@@ -11,6 +12,7 @@ MarkupSafe==2.1.2
 numpy==1.24.2
 opencv-python==4.7.0.72
 PyJWT==2.6.0
+pymongo==4.3.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 scikit-learn==1.2.2
