add dev.local script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "local": "vite --host dev.local"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
