--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.8.1"
   },
